@startuml
scale 2
skinparam monochrome true
skinparam shadowing false
skinparam defaultFontSize 20
title Logical Database Design - Flutter CEA System

entity "kits" as kits {
  *id : TEXT <<PK>>
  --
  name : TEXT
  createdAt : TIMESTAMPTZ
}

entity "telemetry" as telemetry {
  *rowId : TEXT <<PK>>
  --
  deviceId : TEXT <<FK>>
  ingestTime : BIGINT
  ppm : FLOAT
  ph : FLOAT
  tempC : FLOAT
  humidity : FLOAT
  waterTemp : FLOAT
  waterLevel : FLOAT
  payloadHash : TEXT <<UNIQUE>>
}

entity "actuator_event" as actuator {
  *id : SERIAL <<PK>>
  --
  deviceId : TEXT <<FK>>
  ingestTime : BIGINT
  phUp : INT
  phDown : INT
  nutrientAdd : INT
  valueS : FLOAT
  refill : INT
  manual : INT
  auto : INT
}

entity "actuator_cooldown" as cooldown {
  *id : SERIAL <<PK>>
  --
  deviceId : TEXT <<FK>>
  actionType : TEXT
  lastTime : BIGINT
  lastValue : FLOAT
}

entity "device_mode" as device_mode {
  *id : SERIAL <<PK>>
  --
  userId : TEXT
  deviceId : TEXT <<FK>>
  autoMode : BOOLEAN
  updatedAt : TIMESTAMPTZ
}

entity "user_preference" as user_pref {
  *id : SERIAL <<PK>>
  --
  userId : TEXT <<UNIQUE>>
  selectedKitId : TEXT <<FK>>
  updatedAt : TIMESTAMPTZ
}

entity "notifications" as notifications {
  *id : SERIAL <<PK>>
  --
  userId : TEXT
  deviceId : TEXT <<FK>>
  level : TEXT
  title : TEXT
  message : TEXT
  isRead : BOOLEAN
  createdAt : TIMESTAMPTZ
}

entity "ml_prediction_log" as ml_log {
  *id : SERIAL <<PK>>
  --
  deviceId : TEXT <<FK>>
  predictTime : BIGINT
  payloadJson : JSONB
  predictJson : JSONB
}

entity "user_kits" as user_kits {
  *userId : TEXT <<PK>>
  *kitId : TEXT <<PK, FK>>
  --
  addedAt : TIMESTAMPTZ
}

kits ||--o{ telemetry
kits ||--o{ actuator
kits ||--o{ cooldown
kits ||--o{ device_mode
kits ||--o| user_pref
kits ||--o{ notifications
kits ||--o{ ml_log
kits ||--o{ user_kits

@enduml
